SCRUM-19 - added: templates/customer_info.html, changed: customers/urls.py, customers/views.py, templates/home.html, templates/login.html, templates/register.html - modified redirections in html files, logout and customerinfo functions created

--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -17,5 +17,6 @@
 
         <button type="submit">Register</button>
     </form>
+    <a href="{% url 'login_page' %}" class="button">Go to Login Page</a>
 </body>
 </html>
