--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -7,5 +7,6 @@
     <p>Welcome to the home page!</p>
     <a href="{% url 'register_page' %}" class="button">Go to Register Page</a>
     <a href="{% url 'login_page' %}" class="button">Go to Login Page</a>
+    <a href="{% url 'customer_info' %}" class="button">Go to Personal Information Page</a>
 </body>
 </html>
