--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -15,5 +15,6 @@
         
         <button type="submit">Login</button>
     </form>
+    <a href="{% url 'register_page' %}" class="button">Go to Register Page</a>
 </body>
 </html>
