--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -4,9 +4,18 @@
 </head>
 <body>
     <h1>Home Page</h1>
-    <p>Welcome to the home page!</p>
-    <a href="{% url 'register_page' %}" class="button">Go to Register Page</a>
-    <a href="{% url 'login_page' %}" class="button">Go to Login Page</a>
+    {% if user.is_authenticated %}
+    Hi {{ user.username }}, welcome to the home page!
+    <form action="{% url 'logout' %}" method="post">
+
+    {% csrf_token %}
+    <button type="submit">Log Out</button>
+    </form>
+    {% else %}
+    <p>You are not logged in</p>
+    <a href="{% url 'login' %}">Log In</a>
+    {% endif %}
+    
     <a href="{% url 'customer_info' %}" class="button">Go to Personal Information Page</a>
 </body>
 </html>
