SCRUM-19 - added: templates/update_customer_info.html - update cutomer info page, changed: customers/forms.py, customers/urls.py, customers/views.py, templates/customer_info.html - optional customer info form, finished update function

--- a/backend/templates/customer_info.html
+++ b/backend/templates/customer_info.html
@@ -5,6 +5,7 @@
 <body>
     <h1>Customer personal information</h1>
     {% if user.is_authenticated %}
+    Username: {{ user.username }}<br>
     First name: {{ customer_personal_info.first_name }}<br>
     Last name: {{ customer_personal_info.last_name }}<br>
     Gender: {{ customer_personal_info.gender }}<br>
@@ -21,7 +22,7 @@
     <p>You are not logged in</p>
     <a href="{% url 'login_page' %}">Log In</a>
     {% endif %}
-    
+    <a href="{% url 'update_customer_info' %}" class="button">Update personal information</a>
     <a href="{% url 'home_page' %}" class="button">Go to Home Page</a>
 </body>
 </html>
