--- a/backend/templates/base_property_form.html
+++ b/backend/templates/base_property_form.html
@@ -1,3 +1,5 @@
+{% include 'base.html' %}
+
 <form method="POST" action="{% url 'create_property' %}" enctype="multipart/form-data">
     {% csrf_token %}
     <h2>Add new property listing</h2>
