--- a/backend/templates/update_customer_info.html
+++ b/backend/templates/update_customer_info.html
@@ -3,15 +3,13 @@
     <title>Update personal information</title>
 </head>
 <body>
-    <h1>Update personal information</h1>
+    <header>
+        {% include 'base.html' %}
+        <h1>Update Personal Information</h1>
+    </header>
     <form method="post">
         {% csrf_token %}
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password"><br>
-
         {{ form.as_p }}
-
         <button type="submit">Update information</button>
     </form>
     <a href="{% url 'customer_info' %}" class="button">Go to personal information</a>
