--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -3,9 +3,22 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Home Page</h1>
-    <p>Welcome to the home page!</p>
-    <a href="{% url 'register_page' %}" class="button">Go to Register Page</a>
-    <a href="{% url 'login_page' %}" class="button">Go to Login Page</a>
+    <header>
+        {% include 'base.html' %}
+        <h1>Home Page</h1>
+    </header>
+    {% if user.is_authenticated %}
+        <p>Hi {{ user.username }}, welcome to the home page!</p>
+        <a href="{% url 'customer_info' %}" class="button">Go to Personal Information Page</a>
+        <form action="{% url 'logout' %}" method="post">
+            {% csrf_token %}
+            <button type="submit">Log Out</button>
+        </form>
+    {% else %}
+        <p>You are not logged in</p>
+        <a href="{% url 'login_page' %}">Log In</a>
+        <a href="{% url 'register_page' %}">Register</a>
+    {% endif %}
+
 </body>
 </html>
